# rust-reqwest-practice-2025

./: .gitignore  Cargo.toml  LICENSE  README.md  lefthook.yaml
crates/random_dog/: Cargo.toml
crates/random_dog/src/: fetcher.rs  main.rs  models.rs
