[package]
name = "random_dog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
reqwest = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
